[tool.poetry]
name = "app"
version = "0.1.0"
description = "An app that does something"
authors = ["Henry"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.1.0"
isort = "^5.10.1"
bandit = "^1.7.2"
flake8 = "^4.0.1"
mypy = "^0.931"
pytest = "^7.0.1"
fastapi = "^0.70.0"
starlette = "^0.16.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
mangum = "^0.12.4"
python-json-logger = "^2.0.2"
requests = "^2.27.1"
types-requests = "^2.27.9"
coverage = "^6.3.2"
safety = "^1.10.3"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = []
import_heading_stdlib = 'Standard library imports'
import_heading_thirdparty = 'Third party imports'
import_heading_firstparty = 'Local application imports'
import_heading_localfolder = 'Local folder imports'
known_first_party = ['src']

[tool.coverage.run]
branch = true
command_line = '-m pytest -s -rP -v'
source = ['src/']
omit = [
    "tests/*",
    "src/logger.py",
    "src/settings.py",
    "*__init__.py",
    "*env/*",
]

[tool.coverage.report]
precision = 2
skip_covered = true
fail_under = 0